--- a/rag/Dockerfile
+++ b/rag/Dockerfile
@@ -1,9 +1,13 @@
 FROM base:3.11
 
+WORKDIR /app/rag/vectorstore_faiss
+
 WORKDIR /app
 
 COPY . ./rag
 
 WORKDIR /app/rag
+
+EXPOSE 8002
 
 CMD ["python", "rag.py"]
