prepare services for serverless containers

--- a/logger/Dockerfile
+++ b/logger/Dockerfile
@@ -6,6 +6,9 @@ COPY . ./logger
 
 WORKDIR /app/logger
 
-EXPOSE 8020
+# Health check для serverless контейнера
+# PORT будет установлен автоматически Yandex Cloud
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:${PORT:-8020}/health || exit 1
 
 CMD ["python", "logger.py"]
