--- a/orchestrator/Dockerfile
+++ b/orchestrator/Dockerfile
@@ -6,6 +6,9 @@ COPY . ./orchestrator
 
 WORKDIR /app/orchestrator
 
-EXPOSE 8003
+# Health check для serverless контейнера
+# PORT будет установлен автоматически Yandex Cloud
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:${PORT:-8003}/health || exit 1
 
 CMD ["python", "orchestrator.py"]
