--- a/yandex_gpt/Dockerfile
+++ b/yandex_gpt/Dockerfile
@@ -6,6 +6,9 @@ COPY . ./yandex_gpt
 
 WORKDIR /app/yandex_gpt
 
-EXPOSE 8000
+# Health check для serverless контейнера
+# PORT будет установлен автоматически Yandex Cloud
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:${PORT:-8000}/health || exit 1
 
 CMD ["python", "yandex_gpt.py"]
